widening the label to prevent wrapping

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -200,7 +200,7 @@ label{
   font-weight: 600;
   text-align:left;
   vertical-align:middle;
-  width: 60px;
+  width: 75px;
 }
 input[type=text], input[type=email], input[type=url], textarea{
   padding: 12px;
